# topapprox

./: .gitignore  CMakeLists.txt  Interactive_Tutorial_topapprox.ipynb  LICENSE  README.md  pyproject.toml  python.gitignore  setup.py  test.py  test_log.txt
.binder/: environment.yml
.github/workflows/: ci.yml  release.yml
Interactive Tutorial/: Interactive_Tutorial_topapprox.ipynb
Interactive_Tutorial/: Interactive_Tutorial_topapprox.ipynb
Paper examples/: Reproducing_paper_examples.ipynb  func.csv  mesh_vertices.npy  shekel.npy
Paper_examples/: Reproducing_paper_examples.ipynb  mesh_faces.npy
Tutorial/: TopSimp-Tutorial.ipynb
Tutorial/.ipynb_checkpoints/: TopSimp-Tutorial-checkpoint.ipynb
docs/: migration.md
notebook/: BHT_Basin_Visualization.ipynb  ExamplesInPaper.ipynb  Interactive_Tutorial_topapprox.ipynb  Reproducing_paper_examples.ipynb  mesh.ply
tests/: benchmark_log.txt  conftest.py  helpers.py  test_3D_compare_CRIPSER.py  test_compare_version.py  test_graph_diagram_api.py  test_log.txt  test_lpf_1D.py  test_lpf_2D.py  test_pers_eliminated_2D.py
tests/data_for_testing/: pagoda.npy
topapprox/: __init__.py  _backends.py  _filter_base.py  _grid.py  _version.py  bht.py  bht_cpp.cpp  classes.py  filter_graph.py  filter_image.py  gwf.py  link_reduce.cpp  link_reduce.py  link_reduce_cpp.cpp  link_reduce_numba.py  persistence.py  persistence_filter.py  tools.py  visualize.py
topapprox/mixins/: Method_Loader.py  __init__.py
topsimp/: UnionFindImg.py  __init__.py  classes.py  link_reduce.py
