[build-system]
requires = [
    "nanobind>=2.0",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "topapprox"
version = "0.2.1"
description = "Persistent-homology-based filtering for arrays and graph signals."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Matias de Jong van Lier", email = "matias.vanlier@gmail.com" },
    { name = "Shizuo Kaji", email = "shizuo.kaji@gmail.com" },
    { name = "Junyan Chu" },
    { name = "Sebastían Elías Graiff Zurita" },
]
keywords = ["persistent homology", "topological data analysis", "signal processing", "nanobind"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.8",
    "networkx>=3.2",
]
numba = [
    "numba>=0.60; python_version < '3.14'",
]
test = [
    "pytest>=8.2",
]
dev = [
    "build>=1.2.2",
    "cibuildwheel>=2.21",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numba>=0.60; python_version < '3.14'",
    "pytest>=8.2",
    "ruff>=0.6.9",
]

[project.urls]
Homepage = "https://github.com/mvlier/topapprox"
Repository = "https://github.com/mvlier/topapprox"
Issues = "https://github.com/mvlier/topapprox/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["topapprox"]
# nanobind's stable ABI (abi3) needs FindPython's Development.SABIModule (CMake >= 3.26).
cmake.version = ">=3.26"
# Build a single abi3 wheel on CPython >= 3.12; 3.10/3.11 stay version-specific.
wheel.py-api = "cp312"

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "README.md",
    "LICENSE",
    "tests/*.py",
    "tests/data_for_testing/*.npy",
    "topapprox/*.cpp",
]
exclude = [
    ".claude/**",
    ".pytest_cache/**",
    ".github/**",
    "build/**",
    "dist/**",
    "notebook/**",
    "docs/**",
    "**/__pycache__/**",
    "*.so",
    "*.pyd",
    "*.dylib",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.cibuildwheel]
# cp310/cp311 produce version-specific wheels; cp312 produces a single
# cp312-abi3 wheel. cibuildwheel detects that the abi3 wheel already covers
# cp313 (and any later CPython), so it skips rebuilding for cp313 and instead
# runs the test suite against the abi3 wheel on 3.13.
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*-musllinux_*"]
test-command = "python -m pytest {project}/tests/test_compare_version.py {project}/tests/test_lpf_1D.py {project}/tests/test_lpf_2D.py {project}/tests/test_graph_diagram_api.py -q"
test-requires = ["pytest>=8.2"]
